@@ -122,6 +122,7 @@ problems.  Click on a title to expand or collapse a box.</p>
 <LI><A HREF="menu2.html">menu2.sp</A></LI>
 <LI><A HREF="printargs.html">printargs.sp</A></LI>
 <LI><A HREF="radices.html">radices.sp</A></LI>
+<LI><A HREF="string_prepend.html">string_prepend.sp</A></LI>
 <LI><A HREF="stringcase.html">stringcase.sp</A></LI>
 <LI><A HREF="trig.html">trig.sp</A></LI>
 </UL>
